--- a/app/src/main/res/layout/activity_agora_video1.xml
+++ b/app/src/main/res/layout/activity_agora_video1.xml
@@ -52,7 +52,7 @@
                             android:textAppearance="?attr/textAppearanceBody1"
                             android:textSize="16sp"
                             android:visibility="gone"
-                            tools:text="Current user list"
+                            android:text="@string/current_user_list"
                             tools:visibility="visible" />
 
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -95,7 +95,7 @@
                                 android:id="@+id/channel_name"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:hint="Channel Name" />
+                                android:hint="@string/channel_name_hint" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -105,15 +105,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="end"
                             android:layout_marginTop="24dp"
-                            android:text="Join Channel" />
-
-                        <Button
-                            android:id="@+id/leave_button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="end"
-                            android:layout_marginTop="8dp"
-                            android:text="Leave Channel" />
+                            android:text="@string/join_channel" />
 
                         <Button
                             android:id="@+id/mute_button"
@@ -121,7 +113,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="end"
                             android:layout_marginTop="8dp"
-                            android:text="Mute" />
+                            android:text="@string/mute" />
 
                         <Button
                             android:id="@+id/speaker_button"
@@ -129,7 +121,15 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="end"
                             android:layout_marginTop="8dp"
-                            android:text="Speaker" />
+                            android:text="@string/speaker" />
+
+                        <Button
+                            android:id="@+id/switch_camera_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="end"
+                            android:layout_marginTop="8dp"
+                            android:text="@string/switch_camera" />
 
                     </LinearLayout>
 
